force-app/main/default/objects/GW_Volunteers__Volunteer_Recurrence_Schedule__c/fields/GW_Volunteers__Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Schedule_End_Date__c</fullName>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>