force-app/main/default/objects/GW_Volunteers__Volunteer_Recurrence_Schedule__c/fields/GW_Volunteers__Volunteer_Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Hours_Status__c</fullName>
    <inlineHelpText>Select the default status for Volunteer Hours records created by this Volunteer Recurrence Schedule.</inlineHelpText>
    <label>Volunteer Hours Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <default>true</default>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>