force-app/main/default/objects/GW_Volunteers__Volunteer_Recurrence_Schedule__c/fields/GW_Volunteers__Weekly_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Weekly_Occurrence__c</fullName>
    <label>Weekly Occurrence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>